test/files/pos/t4494.scala
// scalac: -Yrangepos
object A {
  List(1)
}
