test/files/neg/t10729/SeqAsAnnotation.scala
object SeqAsAnnotation {
  1: @Seq(10)
}